Implementado testes, documentação e loggers
