# doc/swagger.yml
@@ -1,24 +1,261 @@
 openapi: 3.0.0
+
 info:
-  title: Sample API
-  description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
-  version: 0.1.9
+  title: Example Express
+  description: Criado para API de Exemplo
+  version: 0.0.1
+
 servers:
-  - url: http://api.example.com/v1
-    description: Optional server description, e.g. Main (production) server
-  - url: http://staging-api.example.com
-    description: Optional server description, e.g. Internal staging server for testing
+  - url: http://localhost:3000
+    description: Desenvolvimento
+    
+schemes:
+  - http
+consumes:
+  - application/json
+produces:
+  - application/json
+
+tags:
+  - name: Contato
+    description: Contatos namespace
+  - name: System
+    description: System namespace
+
 paths:
-  /users:
+  /system/healthcheck:
     get:
-      summary: Returns a list of users.
-      description: Optional extended description in CommonMark or HTML.
+      tags: 
+        - System
+      summary: Retorna o status da API.
       responses:
-        '200':    # status code
-          description: A JSON array of user names
+        200:    # status code
+          description: Retorna o status da API.
           content:
             application/json:
               schema: 
-                type: array
-                items: 
-                  type: string
+                type: string
+                example: 'OK'
+  
+  /contato:
+    get:
+      tags: 
+        - Contato
+      summary: Retorna a lista de contatos.
+      parameters:
+        - in: query
+          name: nome
+          description: Nome do contato
+          schema:
+            type: string
+            example: 'Carlos'
+        - in: query
+          name: telefone
+          description: Telefone do contato
+          schema:
+            type: string
+            example: '2835086501612'
+      responses:
+        200:    # status code
+          $ref: '#/components/responses/contato'
+                  
+    post:
+      tags: 
+        - Contato
+      summary: Criação de contatos.
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/contato'
+      responses:
+        200:    # status code
+          description: Retorna a lista de contatos.
+          content:
+            application/json:
+              schema: 
+                type: string
+                example: 'Criado com sucesso ID 1'
+        400:    # status code
+          $ref: '#/components/responses/badRequest'
+        500:    # status code
+          $ref: '#/components/responses/internal'
+          
+  /contato/{id}:
+    get:
+      tags: 
+        - Contato
+      summary: Retorna um contato por ID.
+      parameters:
+        - in: path
+          required: true
+          name: id
+          description: ID do contato
+          schema:
+            type: string
+            example: '1'
+      responses:
+        200:    # status code
+          description: lista de contato.
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  id:
+                    type: number
+                    example: 1
+                  nome:
+                    type: string
+                    example: 'Carlos'
+                  telefone:
+                    type: string
+                    example: '2835086501612'
+                  createdAt:
+                    type: string
+                    example: '2021-03-31 22:34:36.476'
+                  updatedAt:
+                    type: string
+                    example: '2021-03-31 22:34:36.476'
+        400:    # status code
+          $ref: '#/components/responses/badRequest'
+        500:    # status code
+          $ref: '#/components/responses/internal'
+                  
+    put:
+      tags: 
+        - Contato
+      summary: Atualiza um contato.
+      parameters:
+        - in: path
+          required: true
+          name: id
+          description: ID do contato
+          schema:
+            type: string
+            example: '1'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/contato'
+      responses:
+        200:    # status code
+          description: Retorna status.
+          content:
+            application/json:
+              schema: 
+                type: string
+                example: 'ID 1 Atualizado com sucesso'
+        400:    # status code
+          $ref: '#/components/responses/badRequest'
+        500:    # status code
+          $ref: '#/components/responses/internal'
+          
+    delete:
+      tags: 
+        - Contato
+      summary: Deleta um contato.
+      parameters:
+        - in: path
+          required: true
+          name: id
+          description: ID do contato
+          schema:
+            type: string
+            example: '1'
+      responses:
+        200:    # status code
+          description: Retorna a lista de contatos.
+          content:
+            application/json:
+              schema: 
+                type: string
+                example: 'Deletado com sucesso ID 1'
+        400:    # status code
+          $ref: '#/components/responses/badRequest'
+        500:    # status code
+          $ref: '#/components/responses/internal'
+                  
+
+      
+components:
+  responses:
+    badRequest:
+      description: Falha na request.
+      content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: object
+                properties:
+                  message:
+                    type: string
+                    
+    notFound:
+      description: valor não encontrado.
+      content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: object
+                properties:
+                  message:
+                    type: string
+                    
+    internal:
+      description: erro interno.
+      content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: object
+                properties:
+                  message:
+                    type: string
+    
+    contato:
+      description: lista de contatos.
+      content:
+          application/json:
+            schema: 
+              type: array
+              items: 
+                type: object
+                properties:
+                  id:
+                    type: number
+                    example: 1
+                  nome:
+                    type: string
+                    example: 'Ismael Alves'
+                  telefone:
+                    type: string
+                    example: '2835086501612'
+                  createdAt:
+                    type: string
+                    example: '2021-03-31 22:34:36.476'
+                  updatedAt:
+                    type: string
+                    example: '2021-03-31 22:34:36.476'
+                    
+  schemas:
+    contato:
+      type: object
+      required: 
+        - nome
+        - cpf
+        - telefone
+      properties:
+        nome:
+          type: string
+          example: 'Ismael Alves'
+        telefone:
+          type: string
+          example: '2835086501612'
+          
+    
+      
