# src/routes/system.routes.js
@@ -1,0 +1,11 @@
+import express from 'express'
+const router = express.Router();
+import { status } from '../controllers/system.controller';
+
+/**
+ * GET - /system/healthcheck
+ * */    
+router.route('/healthcheck')
+    .get(status)
+
+export default router;
